# OptiSan

./: CMakeLists.txt  GraphConstants.h  README.md  build_optisan.sh  install_deps.sh  neo4j.conf  optisan_bash_aliases  run_example.py  setup_example.sh
BaggyBounds/: CMakeLists.txt  README.md  address_constants.h
BaggyBounds/lib/: allocator.c  allocator.h  baggy_init.c  baggy_libc.c  baggy_slowpath.c  list.h  util.c
BaggyBounds/pass/: BaggyBoundsFunctionPasses.hh  BaggyBoundsPass.cpp  BaggyBoundsPass.hh  BaggyBoundsPointersFunctionPass.cpp  BaggyBoundsPointersOpt.cpp  BaggyBoundsSaveLocalOpt.cpp  BaggyBoundsSaveLocalsFunctionPass.cpp  BaggyLoopAnalysis.cpp  EscapeTracking.cpp  EscapeTracking.h  Util.cpp  Util.h  address_constants.h
CostEstimation/: CMakeLists.txt  CostEstimationFunctionPass.cpp  CostEstimationPass.cpp  CoverageUtilities.cpp  CoverageUtilities.hh  EstimationPass.hh  FunctionScanPass.cpp  FunctionScanPass.hh  GCOV.cpp  README.md
Formulation/: README.md  analyze_lp.py
Formulation/max_profit/: analysis_mon_type.m  build_gurobi_budgeted_model.m  build_gurobi_budgeted_model_intg.m  build_gurobi_sign_budgeted_model.m  build_gurobi_sign_tgroup_budgeted_model.m  build_gurobi_tgroup_budgeted_model.m  get_candea_results.m  get_input.m  maxprofit_main.m  minlp_gurobi.m  place_monitors.m  place_monitors.py  prune_data.m  test.m  translate_result.m
Formulation/min_cost/: build_gurobi_model.m  build_gurobi_sign_model.m  build_gurobi_sign_tgroup_model.m  mincost_main.m  minlp_gurobi.m  prune_data.m  showmap.m  translate_result.m
Instrumentation/: CMakeLists.txt  FunctionScanPass.cpp  FunctionScanPass.hh  PostSanitizationHelperPass.cpp  PreSanitizationHelperPass.cpp  README.md  SanitizerHelperPass.hh  TurnOffChecks.cpp  my-clang.rb  my_clang_utils.rb
SecurityImpactAnalysis/: CMakeLists.txt  FunctionScanPass.cpp  FunctionScanPass.hh  GraphConstants.h  IntraTargetAnalysisPass.cpp  IntraTargetAnalysisPass.hh  MemorySafetyResults.cpp  MemorySafetyResults.hh  PTAWrapper.cpp  README.md  ReachabilityGraph.cpp  ReachabilityGraph.hh  SpatialMemorySafetyAnalysis.cpp  SpatialMemorySafetyAnalysis.hh  TargetAnalysis.h  UsableTargetsAnalysis.cpp
SecurityImpactAnalysis/ValueRangeAnalysis/: AnalysisState.hpp  CMakeLists.txt  CoverageUtilities.cpp  CoverageUtilities.hh  DataflowAnalysis.hh  GCOV.cpp  GCOV.h  GraphConstants.h  NesCheck.cpp  PTAWrapper.cpp  PTAWrapper.hh  README.md  VRHeap.cpp  ValueRangeAnalysis.cpp  ValueRangeAnalysis.hh  ValueRangeStandAlone.cpp  config.h.in
SecurityImpactAnalysis/program-dependence-graph/: CMakeLists.txt  README.md
SecurityImpactAnalysis/program-dependence-graph/include/: DataDependencyGraph.hh  FunctionWrapper.hh  Graph.hh  MemorySafetyResults.hh  PDGCallGraph.hh  PDGEdge.hh  PDGNode.hh  PTAWrapper.hh  ProgramDependencyGraph.hh
SecurityImpactAnalysis/program-dependence-graph/src/: ControlDependencyGraph.cpp  DataDependencyGraph.cpp  DebugInfoUtils.cpp  Graph.cpp  MemorySafetyResults.cpp  PDGCallGraph.cpp  PTAWrapper.cpp  ProgramDependencyGraph.cpp  Tree.cpp
Tests/: Makefile  test1.c  test2.c
Utilities/: CMakeLists.txt  DebugLocIDPass.cpp  DebugLocIDPass.hh  DebugModulePass.cpp  FunctionScanPass.cpp  FunctionScanPass.hh  GraphConstants.h  PTAWrapper.hh  UnsafePtrAnalyzer.cpp  UnsafePtrAnalyzer.hh
example/: apply_patches.sh  build_example_asan.sh  build_example_place.sh
patches/: asan_heap_and_all_interceptors_off.patch  asan_heap_interceptors_logging.patch  asan_heap_interceptors_off.patch  asan_interceptors_off.patch  asan_new_delete.patch  asan_patch_including_logging.patch  asan_precise_stack_md.patch  svf_patch_cpp  svf_patch_h
scripts/: analyze_cves.py  analyze_placement.py  analyze_program.py  build_spec.sh  build_spec_17.sh  candea.py  demo.py  extract_data_from_db.py  monitoring_constants_and_ds.py  monitoring_info_driver.py  monitoring_info_driver_example.py  plug_play_costs.py  run_program.py  run_server_programs.py  save_and_restore_placements.py
